=======
CHANGES
=======

1.6.0 (unreleased)
------------------

- Move schooltool.commendation example plugin into its own project.


1.6.0b1 (2011-04-18)
--------------------

- Added report package (https://launchpad.net/bugs/429588)
  - New Manage->Reports page listing all available reports.
  - New reportLink directive for registering reports.
- Removed 'Report a bug on Launchpad' link from the footer
- Fixed crash when term title is "First" or "Last" (https://launchpad.net/bugs/485639).
- Include meta.zcml of plugins first to allow them have optional dependencies.
- Updated translations.


1.6.0a1 (2011-02-23)
--------------------

New features
++++++++++++

- Added boolean demographic fields.
- Added demographics for resources.
- Added limit keys property to demographic fields.
- Created group-aware (teacher, student, administrator) person add views.
- Use Liberation fonts instead of non-free Microsoft fonts (https://launchpad.net/bugs/371655).
  You have to edit schooltool.conf and change msttcorefonts to ttf-liberation to
  re-enable PDF generation.
- Update included jQuery to 1.5 (https://launchpad.net/bugs/588645).
- Developer documentation can be generated from source.

Cleanup
+++++++

- Removed obsolete dependencies, support upgrading from schooltool >= 1.0 only.
- Removed obsolete config keys.
- Renamed the default schooltool application to schooltool.standard.


1.5.3 (2010-11-24)
------------------

- Fixed Section meeting time misalignment in calendar (https://launchpad.net/bugs/611797)
- Added Bengali and Faroese translations, updated many others


1.5.2 (2010-10-04)
------------------

- Activation of selected school year (https://launchpad.net/bugs/635160)
- Added "Add Multiple Persons" to Manage->Persons and "New Person" (for
  administration) to all other person views (https://launchpad.net/bugs/268127)
- Empty usernames no longer crash when adding a person (https://launchpad.net/bugs/644296)